# RTGC-1.0

./: .gitignore  ARCHITECTURE_DECISIONS.md  Cargo.toml  DEV_LOG_PHASE0.md  OLD_STRUCTURE_BACKUP.txt  PHASE0_COMPLETE_SUMMARY.txt  PLEN3.md  README.md  RTGC_MENU_LOADING_DESIGN-1.md.txt  RTGC_ROADMAP1.md
RTGC-0.9-main/: .gitignore  Cargo.toml  PLEN3.md  README.md  project_code.txt  сделать.txt
RTGC-0.9-main/assets/education/: universities.toml
RTGC-0.9-main/assets/settings/: settings.toml
RTGC-0.9-main/assets/textures/: README.txt
RTGC-0.9-main/assets/ui/: ui_config.toml
RTGC-0.9-main/assets/vehicles/uaz_patriot/: uaz_patriot.vehicle.toml  uaz_patriot_2017.vehicle.toml
RTGC-0.9-main/data/vehicles/: gtsm.toml  kamaz_65115.toml  kc45717_crane.toml  mi8_amt.toml  uaz_patriot.toml  ural_4320.toml
RTGC-0.9-main/data/world/: novosibirsk.toml
RTGC-0.9-main/shaders/: simple.vert  skybox.frag  skybox.vert  sun.frag  sun.vert  terrain.frag  terrain.vert  ui.frag  ui.vert
RTGC-0.9-main/src/: config.rs  error.rs  lib.rs  main.rs  profiler.rs
RTGC-0.9-main/src/assets/: mod.rs  server.rs
RTGC-0.9-main/src/audio/: audio_module.rs  mod.rs
RTGC-0.9-main/src/config/: graphics_api.rs
RTGC-0.9-main/src/ecs/: ecs_module.rs  job_system.rs  mod.rs
RTGC-0.9-main/src/engine/: core.rs  game_loop_manager.rs  input_manager.rs  mod.rs  physics_manager.rs  render_manager.rs  state.rs  subsystems.rs  vehicle_manager.rs  world_manager.rs
RTGC-0.9-main/src/game/: asset_manager.rs  base_builder.rs  cargo.rs  character_creation.rs  debug_menu.rs  economy.rs  events.rs  first_mission.rs  interaction.rs  inventory.rs  loading_manager.rs  main_menu.rs  map_system.rs  mission_generator.rs  mission_save.rs  mod.rs  save.rs  scene.rs  settings.rs  skills.rs  storage.rs  ui.rs  vehicle_parts.rs  weather.rs  winch.rs
RTGC-0.9-main/src/game/player/: appearance.rs  character_creation.rs  mod.rs  player.rs  skills.rs
RTGC-0.9-main/src/game/scenes/: loading.rs  main_menu.rs  mod.rs  open_world.rs  pause.rs
RTGC-0.9-main/src/graphics/: camera.rs  font.rs  gl_context.rs  lighting.rs  material.rs  mesh.rs  mod.rs  particles.rs  render_command.rs  render_queue.rs  renderer.rs  resources.rs  shader.rs  sky_renderer.rs  terrain_mesh_builder.rs  terrain_renderer.rs  texture.rs
RTGC-0.9-main/src/graphics/renderer/: commands.rs  debug.rs  passes.rs  pipeline_cache.rs  renderer.rs  scene.rs  ui.rs
RTGC-0.9-main/src/graphics/rhi/: device.rs  factory.rs  gl.rs  mod.rs  resource_manager.rs  rhi_module.rs  types.rs
RTGC-0.9-main/src/graphics/rhi/dx11/: buffer_dx11.rs  context_dx11.rs  device_dx11.rs  mod.rs  pipeline_dx11.rs  shader_dx11.rs  swapchain_dx11.rs  texture_dx11.rs
RTGC-0.9-main/src/graphics/rhi/dx12/: buffer_dx12.rs  command_dx12.rs  descriptor_heap_dx12.rs  device_dx12.rs  dx12_module.rs  mod.rs  pipeline_dx12.rs  shader_dx12.rs  swapchain_dx12.rs  texture_dx12.rs
RTGC-0.9-main/src/graphics/rhi/vulkan/: buffer_vk.rs  command_vk.rs  descriptor_vk.rs  device_vk.rs  fence_vk.rs  mod.rs  pipeline_vk.rs  shader_vk.rs  swapchain_vk.rs  texture_vk.rs  vulkan_module.rs
RTGC-0.9-main/src/input/: action_map.rs  gamepad.rs  input_module.rs  mapping.rs  mod.rs
RTGC-0.9-main/src/network/: mod.rs  protocol.rs
RTGC-0.9-main/src/physics/: advanced_vehicle.rs  arena_allocator.rs  async_physics.rs  constraints.rs  crane_arm.rs  deformable_terrain.rs  fracture_component.rs  helicopter.rs  mod.rs  physics_module.rs  physics_world.rs  rigid_body.rs  spatial_hash.rs  thread_pool.rs  tracked_vehicle.rs  vehicle.rs
RTGC-0.9-main/src/ui/: hud.rs  mod.rs
RTGC-0.9-main/src/utils/: console.rs  hot_reload.rs  logger.rs  math.rs  mod.rs  path.rs  random.rs  terrain.rs  time.rs
RTGC-0.9-main/src/weather/: dynamic_weather.rs  mod.rs  weather_module.rs
RTGC-0.9-main/src/world/: buildings.rs  chunk.rs  chunk_manager.rs  day_night_cycle.rs  lod_system.rs  mod.rs  novosibirsk_map.rs  prop_spawner.rs  road_network.rs  russian_names.rs  settlement.rs  spatial_index.rs  terrain_generator.rs  world_module.rs  world_streaming.rs
src/: app.rs  core.rs  lib.rs  main.rs
src/animation/: animator.rs  easing.rs  mod.rs  tween.rs
src/audio/: audio_manager.rs  mod.rs  sound_player.rs
src/core/: app_state.rs  engine_hub.rs  error.rs  event_bus.rs  mod.rs  timer.rs
src/font/: font_atlas.rs  font_cache.rs  mod.rs  text_layout.rs
src/graphics/: mod.rs  render_pipeline.rs
src/graphics/game_renderer/: terrain_renderer.rs
src/graphics/rhi/: command_buffer.rs  gl_rhi_backend.rs  mod.rs  thread_rhi.rs  traits.rs  types.rs
src/graphics/rhi/opengl/: buffer.rs  device.rs  framebuffer.rs  pipeline.rs  shader.rs  texture.rs
src/graphics/ui_renderer/: batch.rs  mod.rs  rect_renderer.rs  renderer.rs
src/physics/: mod.rs  physics_thread.rs  thread_f.rs
src/platform/: input.rs  mod.rs  paths.rs  window.rs
src/renderer/: mod.rs
src/renderer/game_renderer/: terrain_renderer.rs
src/renderer/ui_renderer/: batch.rs  image_renderer.rs  mod.rs  rect_renderer.rs  renderer.rs  text_renderer.rs
src/rhi/: command_buffer.rs  mod.rs  traits.rs
src/rhi/opengl/: buffer.rs  device.rs  framebuffer.rs  mod.rs  pipeline.rs  shader.rs  texture.rs
src/save/: character_data.rs  mod.rs  player_profile.rs  save_manager.rs
src/screens/: mod.rs
src/screens/character_creation/: character_creation_screen.rs  mod.rs
src/screens/loading/: loading_screen.rs
src/screens/main_menu/: main_menu_screen.rs  mod.rs
src/screens/settings/: settings_screen.rs
src/screens/splash/: mod.rs  splash_screen.rs
src/ui/: button.rs  label.rs  mod.rs  panel.rs  progress_bar.rs  selector.rs  slider.rs
