[package]
name = "rtgc"
version = "1.0.0-dev"
edition = "2021"
authors = ["NAREZKA578"]
description = "RTGC-1.0 — Russian Truck & Helicopter Game"
license = "Apache-2.0"
resolver = "2"

# ═══════════════════════════════════════════════════════════════
# ПЛАТФОРМА / ОКНО / ВВОД
# ═══════════════════════════════════════════════════════════════
[dependencies]
winit            = "0.30"
gilrs            = "0.10"

# ═══════════════════════════════════════════════════════════════
# РЕНДЕРИНГ — OpenGL бэкенд
# ═══════════════════════════════════════════════════════════════
glow             = "0.14"
glutin           = "0.32"
glutin-winit     = "0.5"

# ═══════════════════════════════════════════════════════════════
# МАТЕМАТИКА
# ═══════════════════════════════════════════════════════════════
nalgebra         = { version = "0.33", features = ["bytemuck"] }
glam             = "0.28"

# ═══════════════════════════════════════════════════════════════
# ШРИФТЫ
# ═══════════════════════════════════════════════════════════════
fontdue          = "0.9"

# ═══════════════════════════════════════════════════════════════
# ИЗОБРАЖЕНИЯ
# ═══════════════════════════════════════════════════════════════
image            = { version = "0.25", default-features = false,
                     features = ["png", "jpeg"] }

# ═══════════════════════════════════════════════════════════════
# АУДИО
# ═══════════════════════════════════════════════════════════════
kira             = "0.9"

# ═══════════════════════════════════════════════════════════════
# СЕРИАЛИЗАЦИЯ / КОНФИГ
# ═══════════════════════════════════════════════════════════════
serde            = { version = "1.0", features = ["derive"] }
toml             = "0.8"
serde_json       = "1.0"

# ═══════════════════════════════════════════════════════════════
# ПОТОКИ И ПАРАЛЛЕЛИЗМ
# ═══════════════════════════════════════════════════════════════
crossbeam-channel = "0.5"
rayon             = "1.10"
parking_lot       = "0.12"

# ═══════════════════════════════════════════════════════════════
# СЕТЬ (для кооператива, Фаза 4)
# ═══════════════════════════════════════════════════════════════
tokio            = { version = "1.38", features = ["full"] }
quinn            = "0.11"

# ═══════════════════════════════════════════════════════════════
# УТИЛИТЫ
# ═══════════════════════════════════════════════════════════════
bytemuck         = { version = "1.16", features = ["derive"] }
uuid             = { version = "1.8",  features = ["v4"] }
rand             = "0.8"
anyhow           = "1.0"
dirs             = "5.0"
hashbrown        = "0.14"
smallvec         = "1.13"
bitflags         = "2.6"
ordered-float    = "4.2"
slotmap          = "1.0"

# ═══════════════════════════════════════════════════════════════
# ЛОГИРОВАНИЕ
# ═══════════════════════════════════════════════════════════════
tracing          = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }

# ═══════════════════════════════════════════════════════════════
# ПРОФИЛИ СБОРКИ
# ═══════════════════════════════════════════════════════════════
[profile.dev]
opt-level       = 1
overflow-checks = true

[profile.release]
lto             = "thin"
codegen-units   = 1
strip           = true
panic           = "abort"

[profile.dev.package."*"]
opt-level       = 2

# ═══════════════════════════════════════════════════════════════
# ФИЧИ
# ═══════════════════════════════════════════════════════════════
[features]
default       = ["opengl"]
opengl        = []
dx11          = []
vulkan        = []
debug_physics = []
debug_ui      = []
debug_network = []
