[package]
name = "rtgc"
version = "0.9.0"
edition = "2021"
authors = ["RTGC Team"]
description = "Russian Technological Game Core"

[dependencies]
# Window & Input
winit = "0.30"
raw-window-handle = "0.6"

# Math
nalgebra = "0.32"

# Chrono
chrono = { version = "0.4", features = ["serde"] }

# Threading
rayon = "1.10"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Audio
cpal = "0.15"
rodio = "0.19"

# Assets
image = "0.25"
ddsfile = "0.5"
ktx2 = "0.3"
gltf = "1.4"

# Logging & Profiling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracy-client = { version = "0.17", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"

# Audio decoding
symphonia = { version = "0.5", features = ["ogg", "vorbis", "wav", "pcm"] }

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
bytemuck = "1.18"
bitflags = "2.6"
once_cell = "1.19"
ab_glyph = "0.2"
uuid = { version = "0.8", features = ["v4"] }
dirs = "5.0"

# Graphics
glow = "0.13"
glutin = "0.32"
glutin-winit = "0.5"

# Random
rand = "0.8"
rand_chacha = "0.3"

# DX11/DX12
[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
] }

# Vulkan
ash = { version = "0.38", optional = true, features = ["loaded"] }

[features]
default = ["console", "debug_overlay"]
profiling = ["tracy-client"]
dx11 = []
dx12 = ["dx11"]
vulkan = []
dev_tools = ["console", "hot_reload", "debug_overlay"]
console = []
hot_reload = []
debug_overlay = []

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false